<resources>
    <string name="app_name">Reporte</string>
    <string name="scc_splash">SCC</string>
    <string name="reports_splash">REPORTES</string>
    <string name="registerLabel">CREAR CUENTA</string>
    <string name="initLabel">INICIAR CUENTA</string>
    <string name="loginLabel">INICIAR SESIÓN</string>
    <string name="nextLabel">Continuar</string>
    <string name="yesLabel">Si -> Continuar</string>
    <string name="canceltLabel">No -> Cancelar</string>
    <string name="endLabel">Finalizar</string>
    <string name="login_user_error_message">No se ha podido iniciar sesión</string>
    <string name="invalid_user_credential">Correo o contraseña incorrecta</string>
    <string name="user_must_register">El usuario indicado debe crearse una cuenta</string>
    <string name="last_reports_label">Historial de Reportes</string>
    <string name="my_data_label">Mis Datos</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="logout_explain">¿Seguro que desea cerrar sesión y volver a introducir el correo y la contraseña?</string>
    <string name="discard_logout">NO, ¿para qué?</string>
    <string name="confirm_logout">Si</string>
    <string name="create_report_label">Crear Reporte</string>
    <string name="biblical_studies_label">Estudios Bíblicos</string>
    <string name="biblical_studies_button">Crear Estudio</string>
    <string name="create_biblical_studies_label">Crear Estudio Bíblico</string>
    <string name="more_label">...</string>
    <string name="scc_label">SCC</string>
    <string name="radio_label">RADIO</string>
    <string name="facebook_label">FACEBOOK</string>
    <string name="youtube_label">YOUTUBE</string>
    <string name="twitter_label">TWITTER</string>
    <string name="instagram_label">INSTAGRAM</string>
    <string name="menu_home">Principal</string>
    <string name="menu_reports">Reportes</string>
    <string name="menu_biblicals">Estudios</string>
    <string name="email">Correo eléctronico</string>
    <string name="password">Contraseña</string>
    <string name="welcome_message">Dios te bendiga</string>
    <string name="error_message">No se pudo obtener el resultado, intente de nuevo</string>
    <string name="empty_message">No ha llenado reportes hasta el momento</string>
    <string name="empty_message_biblical">No ha creado estudios bíblicos hasta el momento</string>
    <string name="report_label">Reporte</string>
    <string name="edit_report_label">Editar Reporte</string>
    <string name="edit_label">Editar</string>
    <string name="update_label">Actualizar</string>
    <string name="edit_user_label">Editar Mis Datos</string>
    <string name="avivamientos_label">Avivamientos</string>
    <string name="ayunos_label">Ayunos</string>
    <string name="biblias_label">Biblias</string>
    <string name="cultos_label">Cultos</string>
    <string name="devocionales_label">Devocionales</string>
    <string name="enfermos_label">Enfermos</string>
    <string name="estudios_asistidos_label">Est. Asistidos</string>
    <string name="estudios_establecidos_label">Est. Establecidos</string>
    <string name="estudios_realizados_label">Est. Realizados</string>
    <string name="hogares_label">Hogares</string>
    <string name="horas_ayunos_label">Horas Ayunos</string>
    <string name="mensajeros_label">Mensajeros</string>
    <string name="mensajes_label">Mensajes</string>
    <string name="otros_label">Otros</string>
    <string name="horas_trabajo_label">Trabajo Misionero"</string>
    <string name="porciones_label">Porciones</string>
    <string name="sanidades_label">Sanidades</string>
    <string name="visitas_label">Visitas</string>
    <string name="estudios_label">Estudios</string>
    <string name="asistidosE_label">Asistidos</string>
    <string name="establecidosE_label">Establecidos</string>
    <string name="realizadosE_label">Realizados</string>
    <string name="full_name">Nombre y Apellidos</string>
    <string name="full_name_explain_label">Si su nombre está escrito incorrectamente puede cambiarlo</string>
    <string name="nombre_label">Nombre</string>
    <string name="email_label">Correo</string>
    <string name="new_password_label">Nueva contraseña</string>
    <string name="details_new_password">Establezca una nueva contraseña.
        Necesitará estas credenciales en caso de que cierre sesión en este dispositivo o quiera iniciar cuenta en otro.</string>
    <string name="grado_label">Grado</string>
    <string name="phone">Número de Teléfono</string>
    <string name="address">Dirección</string>
    <string name="birth_day_label">Fecha de Nacimiento</string>
    <string name="wedding_day_label">Fecha de Casamiento</string>
    <string name="married_label">¿ Es casado/a?</string>
    <string name="conyuge_label">Nombre del cónyuge</string>
    <string name="detail_married_label">Si es casado/a debe proveer al menos el nombre de su cónyuge,
    de lo contrario responda No.</string>
    <string name="grado_explain_label">Seleccione el grado eclesiástico que le ha sido otorgado por la Iglesia</string>
    <string name="ministerio_label">Ministerio</string>
    <string name="ministerio_explain_label">¿De que manera sirve en la iglesia de Dios?
    Apostolado, profesía, evangelismo, pastorado, maestro, audio visual, sanidad.</string>
    <string name="ministerio">Sirvo a Dios en el ministerio de..</string>
    <string name="responsabilidad_label">Responsabilidad</string>
    <string name="responsabilidad_explain_label">¿Que cargo tiene en la iglesia local?
    Ujier, finanzas, lider (juvenil, caballero, damas, de oración) u algún otro servicio.</string>
    <string name="responsabilidad">Soy responsable de..</string>
    <string name="datos_usuario">Datos de usuario</string>
    <string name="datos_usuario_explain">Credenciales que le fueron otorgadas por el secretario de su iglesia local
    para acceder al sistema de reportes</string>
    <string name="pastor_label">Pastor</string>
    <string name="lugar_label">Lugar</string>
    <string name="numero_label">Numero de Feligresía</string>
    <string name="password_label">Contraseña</string>
    <string name="ninguno_label">No</string>
    <string name="datos_personales_label">Datos personales</string>
    <string name="verification_label">Verifique que es usted</string>
    <string name="nombre_completo_label">Incluya su nombre, segundo nombre y apellidos</string>
    <string name="iglesia_label">Iglesia</string>
    <string name="iglesia_explain_label">Selecccione la iglesia a la que pertenece</string>
    <string name="register_bt_label">Registrarme</string>
    <string name="already_label">¿No tiene una cuenta?</string>
    <string name="login_tb_label">Entrar</string>
    <string name="null_response_error_message">No se recibió datos de la conexión con el servidor</string>
    <string name="init_user_error_message">No se ha podido crear una cuenta con los datos proporcionados</string>
    <string name="create_user_error_message">No se ha podido autorizar al usuario</string>
    <string name="user_exist_message">Un usuario con ese correo ya existe</string>
    <string name="user_no_exist_message">El usuario indicado no existe</string>
    <string name="user_created">Su cuenta se ha creado</string>
    <string name="must_register">Debe introducir sus datos personales antes de registarse, o seleccionar entrar</string>
    <string name="edit_user_error_message">No se ha podido editar los datos de usuario</string>
    <string name="edit_user_success_message">Se han cambiando los datos de usuario correctamente</string>
    <string name="mandatory_error">Obligatorio</string>
    <string name="invalid_email">Correo Inválido</string>
    <string name="mandatory_address">Debe introducir su dirección</string>
    <string name="mandatory_grado">Debe especificar su grado</string>
    <string name="invalid_name">Nombre Inválido</string>
    <string name="logout_menu_label">Cerrar Sesión</string>
    <string name="help_menu_label">Ayuda</string>
    <string name="create_report_error_message">No se ha podido agregar el reporte</string>
    <string name="create_report_success_message">Reporte agregado correctamente</string>
    <string name="edit_report_error_message">No se ha podido editar el reporte</string>
    <string name="edit_report_success_message">Se ha cambiado el reporte correctamente</string>
    <string name="create_biblical_error_message">No se ha podido agregar el Estudio Bíblico</string>
    <string name="create_biblical_success_message">Estudio Bíblico agregado correctamente</string>
    <string name="nombre_estudio_label">Nombre para este Estudio Bíblico</string>
    <string name="direccion_estudio_label">Dirección</string>
    <string name="scc_website_url">https://www.soldadosdelacruz.org/</string>
    <string name="radio_website_url">http://radiodirectoalcorazon.com//</string>
    <string name="facebook_url">https://www.facebook.com/radiodirectoalcorazon</string>
    <string name="facebook_page_id">886750211342788</string>
    <string name="main_notification_channel_name">reports</string>
    <string name="create_report_reminder_notification_title">Termine de llenar el reporte</string>
    <string name="create_report_reminder_notification_body">
        Recuerde actualizar su reporte en caso que tenga mas información que agregar. Gracias.
    </string>
    <string name="help_main_label">Tutorial</string>
    <string name="topic_create_report">Cómo crear un Informe Evangelístico Mensual</string>
    <string name="details_create_report_help">
        <b>\u25CB</b> En la vista principal seleccione <i><u>Crear Reporte</u></i>.
        \n<b>\u25CB</b> Cuando termine de llenar los datos correspondientes a su informe,
        seleccione guardar en la parte superior derecha.\n
        \u2022 Tenga en cuenta que solo podrá crear un reporte a partir del día 1ro de cada mes.
        <b>(El reporte creado corresponde al mes anterior)</b>
    </string>
    <string name="topic_edit_report">Cómo editar un Informe Evangelístico Mensual</string>
    <string name="details_edit_report_help">
        \n<b>\u25CB</b> En la vista de navegación inferior seleccione <i><u>Reportes</u></i>.
        \n<b>\u25CB</b> Vaya al reporte correspondiente.
        \n<b>\u25CB</b> Seleccione <i><u>Editar</u></i>.
        \n<b>\u25CB</b> Cuando termine de llenar los datos del informe,
        seleccione guardar en la parte superior derecha.
    </string>
    <string name="topic_add_biblical">Cómo agregar un Estudio Bíblico</string>
    <string name="details_add_biblical_help">
        \n<b>\u25CB</b> En la vista principal seleccione <i><u>Crear Estudio</u></i>,
        o en la vista de lista de estudios seleccione el botón inferior derecho.
        \n<b>\u25CB</b> Cuando termine de llenar los datos correspondientes,
        seleccione guardar en la parte superior derecha.
    </string>
    <string name="topic_delete_biblical">Cómo eliminar un Estudio Bíblico</string>
    <string name="details_delete_biblical_help">
        \n<b>\u25CB</b> En la vista de navegación inferior seleccione <i><u>Estudios</u></i>.
        \n<b>\u25CB</b> Una ves localizado el estudio: deslice hacia la izquierda y confirme la eliminación.
    </string>
    <string name="topic_contact">Soporte Técnico y Preguntas</string>
    <string name="details_contact_help">
        \n<b>\u25CB</b> Si necesita ayuda no dude en contactarnos a <i><u>scruzcristo@gmail.com</u></i>.
        \nTambién puede recibir ayuda a través del sitio oficial de la Iglesia o mediante su pastor.
        \nGracias.
    </string>
    <string name="delete">Eliminar</string>
    <string name="explicados">Campos del reporte explicados</string>
    <string name="delete_biblical_error_message">No se ha podido eliminar el reporte bíblico</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>