<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_gradient"
    tools:context="com.sccreporte.reporte.CreatePasswordActivity"
    android:clickable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_gravity="center"
        android:text="@string/scc_splash"
        style="@style/sccSplashStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:text="@string/reports_splash"
        style="@style/reportSplashStyle" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/loginStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/email_label"
        android:inputType="textEmailAddress"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/loginStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_action_pass"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/loginTextView"
        style="@style/loginTBStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tb_label"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"/>

    <TextView
        android:id="@+id/orTextView"
        style="@style/loginTBStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="o"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_label"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"/>

    <android.support.v7.widget.CardView
        android:id="@+id/registerCardView"
        android:layout_width="250dp"
        android:layout_height="48dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/colorBackgroundRegister">
        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/register_bt_label"
            android:clickable="true"
            android:background="?android:attr/selectableItemBackground"
            style="@style/registerBTStyle"/>
    </android.support.v7.widget.CardView>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

</LinearLayout>
