<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/register_gradient"
    tools:context="com.sccreporte.reporte.RegisterActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/register_label"
        style="@style/registerLabelStyle" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nombreEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/nombre_label" />


            <EditText
                android:id="@+id/gradoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/grado_label" />

            <EditText
                android:id="@+id/ministerioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/ministerio_label" />

            <EditText
                android:id="@+id/responsabilidadEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/responsabilidad_label" />

            <EditText
                android:id="@+id/pastorEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/pastor_label" />

            <EditText
                android:id="@+id/lugardEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/lugar_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_gravity="center"
                android:text="@string/scc_splash"
                style="@style/sccSplashStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/reports_splash"
                style="@style/reportSplashStyle" />

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom">
    <Button
        style="@style/registerLabelStyle"
        android:background="@color/colorBackgroundRegister"
        android:textColor="@color/colorForegroundRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_weight="0"
        android:padding="16dp"
        android:text="@string/register_tb_label"/>
    </LinearLayout>
</LinearLayout>
