<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/registerBackground"
    tools:context="com.sccreporte.reporte.Register_0">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_background"
        android:scaleType="centerCrop"
        android:alpha="0.05"/>

    <ImageButton
        android:id="@+id/backIB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:selectableItemBackgroundBorderless"
        app:srcCompat="@drawable/ic_action_back" />
    <TextView
        android:id="@+id/datosUsuarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/backIB"
        android:text="@string/datos_usuario"
        style="@style/registerMainLabel" />
    <View
        android:id="@+id/divView"
        android:layout_width="match_parent"
        style="@style/divRegister"
        android:layout_below="@+id/datosUsuarioTextView"/>

    <TextView
        android:id="@+id/explainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@+id/divView"
        android:text="@string/datos_usuario_explain"
        style="@style/explainLabel"
        android:gravity="center"/>

    <EditText
        android:id="@+id/emailET"
        style="@style/loginFieldsRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explainTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordET"
        style="@style/loginFieldsRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/emailET"
        android:drawableLeft="@drawable/ic_action_pass"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:layout_above="@+id/initLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/initLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/initButton"
            style="@style/registerLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLoginButton"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/initLabel" />
    </LinearLayout>

</RelativeLayout>