<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/registerBackground"
    tools:context="com.sccreporte.reporte.Register_1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/splash_background"
        android:scaleType="centerCrop"
        android:alpha="0.1"/>

    <TextView
        android:id="@+id/verificationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/verification_label"
        android:layout_below="@+id/backIB"
        style="@style/registerMainLabel" />
    <View
        android:id="@+id/divView"
        android:layout_width="match_parent"
        style="@style/divRegister"
        android:layout_below="@+id/verificationTextView"/>

    <TextView
        android:id="@+id/explainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:layout_below="@+id/divView"
        android:text="@string/full_name_explain_label"
        style="@style/explainLabel"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/explainTextView"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        style="@style/reportDataStyle">
        <EditText
            android:id="@+id/nameEditText"
            style="@style/reportDataStyle"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:hint="@string/full_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/churchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/nameTextInput"
        android:text="Congregación"
        style="@style/registerMainLabel"
        android:textSize="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/cancelTextView"
            android:text="@string/canceltLabel"
            style="@style/registerLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/nextButton"
            style="@style/registerLabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLoginButton"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/yesLabel" />
    </LinearLayout>

</RelativeLayout>